--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
         }
     },
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "symfony/process": "^3.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.4"
     }
 }
